added data analysis notebook

--- a/Loan Risk Data Cleaning.ipynb
+++ b/Loan Risk Data Cleaning.ipynb
@@ -1064,7 +1064,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Loan Status</th>\n",
        "      <th>Current Loan Amount</th>\n",
        "      <th>Term</th>\n",
        "      <th>Credit Score</th>\n",
@@ -1082,7 +1081,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>445412.0</td>\n",
        "      <td>short term</td>\n",
        "      <td>709.0</td>\n",
@@ -1098,7 +1096,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>262328.0</td>\n",
        "      <td>short term</td>\n",
        "      <td>NaN</td>\n",
@@ -1114,7 +1111,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>99999999.0</td>\n",
        "      <td>short term</td>\n",
        "      <td>741.0</td>\n",
@@ -1130,7 +1126,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>347666.0</td>\n",
        "      <td>long term</td>\n",
        "      <td>721.0</td>\n",
@@ -1146,7 +1141,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>176220.0</td>\n",
        "      <td>short term</td>\n",
        "      <td>NaN</td>\n",
@@ -1165,12 +1159,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Loan Status  Current Loan Amount        Term  Credit Score  Annual Income  \\\n",
-       "0  fully paid             445412.0  short term         709.0      1167493.0   \n",
-       "1  fully paid             262328.0  short term           NaN            NaN   \n",
-       "2  fully paid           99999999.0  short term         741.0      2231892.0   \n",
-       "3  fully paid             347666.0   long term         721.0       806949.0   \n",
-       "4  fully paid             176220.0  short term           NaN            NaN   \n",
+       "   Current Loan Amount        Term  Credit Score  Annual Income  \\\n",
+       "0             445412.0  short term         709.0      1167493.0   \n",
+       "1             262328.0  short term           NaN            NaN   \n",
+       "2           99999999.0  short term         741.0      2231892.0   \n",
+       "3             347666.0   long term         721.0       806949.0   \n",
+       "4             176220.0  short term           NaN            NaN   \n",
        "\n",
        "  Home Ownership  Monthly Debt  Years of Credit History  \\\n",
        "0  home mortgage       5214.74                     17.2   \n",
@@ -1201,7 +1195,7 @@
    ],
    "source": [
     "#Drop columns which are not required for analysis\n",
-    "loan_data_clean = loan_data_clean.drop(columns=['Loan ID','Customer ID','Years in current job', 'Months since last delinquent', 'Tax Liens', 'Purpose'])\n",
+    "loan_data_clean = loan_data_clean.drop(columns=['Loan ID','Customer ID','Years in current job', 'Loan Status', 'Months since last delinquent', 'Tax Liens', 'Purpose'])\n",
     "loan_data_clean.head(5)"
    ]
   },
@@ -1217,7 +1211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(80683, 13)\n"
+      "(80683, 12)\n"
      ]
     }
    ],
@@ -1517,7 +1511,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Loan Status</th>\n",
        "      <th>Current Loan Amount</th>\n",
        "      <th>Credit Score</th>\n",
        "      <th>Annual Income</th>\n",
@@ -1538,7 +1531,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>445412.0</td>\n",
        "      <td>709.0</td>\n",
        "      <td>1167493.0</td>\n",
@@ -1557,7 +1549,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>99999999.0</td>\n",
        "      <td>741.0</td>\n",
        "      <td>2231892.0</td>\n",
@@ -1576,7 +1567,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>347666.0</td>\n",
        "      <td>721.0</td>\n",
        "      <td>806949.0</td>\n",
@@ -1595,7 +1585,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>charged off</td>\n",
        "      <td>206602.0</td>\n",
        "      <td>7290.0</td>\n",
        "      <td>896857.0</td>\n",
@@ -1614,7 +1603,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>217646.0</td>\n",
        "      <td>730.0</td>\n",
        "      <td>1184194.0</td>\n",
@@ -1636,19 +1624,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Loan Status  Current Loan Amount  Credit Score  Annual Income  \\\n",
-       "0   fully paid             445412.0         709.0      1167493.0   \n",
-       "2   fully paid           99999999.0         741.0      2231892.0   \n",
-       "3   fully paid             347666.0         721.0       806949.0   \n",
-       "5  charged off             206602.0        7290.0       896857.0   \n",
-       "6   fully paid             217646.0         730.0      1184194.0   \n",
+       "   Current Loan Amount  Credit Score  Annual Income  Monthly Debt  \\\n",
+       "0             445412.0         709.0      1167493.0       5214.74   \n",
+       "2           99999999.0         741.0      2231892.0      29200.53   \n",
+       "3             347666.0         721.0       806949.0       8741.90   \n",
+       "5             206602.0        7290.0       896857.0      16367.74   \n",
+       "6             217646.0         730.0      1184194.0      10855.08   \n",
        "\n",
-       "   Monthly Debt  Years of Credit History  Number of Open Accounts  \\\n",
-       "0       5214.74                     17.2                      6.0   \n",
-       "2      29200.53                     14.9                     18.0   \n",
-       "3       8741.90                     12.0                      9.0   \n",
-       "5      16367.74                     17.3                      6.0   \n",
-       "6      10855.08                     19.6                     13.0   \n",
+       "   Years of Credit History  Number of Open Accounts  \\\n",
+       "0                     17.2                      6.0   \n",
+       "2                     14.9                     18.0   \n",
+       "3                     12.0                      9.0   \n",
+       "5                     17.3                      6.0   \n",
+       "6                     19.6                     13.0   \n",
        "\n",
        "   Number of Credit Problems  Current Credit Balance  Maximum Open Credit  \\\n",
        "0                        1.0                228190.0             416746.0   \n",
@@ -1713,7 +1701,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Loan status</th>\n",
        "      <th>Current loan amount</th>\n",
        "      <th>Credit score</th>\n",
        "      <th>Annual income</th>\n",
@@ -1734,7 +1721,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>445412.0</td>\n",
        "      <td>709.0</td>\n",
        "      <td>1167493.0</td>\n",
@@ -1753,7 +1739,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>99999999.0</td>\n",
        "      <td>741.0</td>\n",
        "      <td>2231892.0</td>\n",
@@ -1772,7 +1757,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>347666.0</td>\n",
        "      <td>721.0</td>\n",
        "      <td>806949.0</td>\n",
@@ -1791,7 +1775,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>charged off</td>\n",
        "      <td>206602.0</td>\n",
        "      <td>7290.0</td>\n",
        "      <td>896857.0</td>\n",
@@ -1810,7 +1793,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>fully paid</td>\n",
        "      <td>217646.0</td>\n",
        "      <td>730.0</td>\n",
        "      <td>1184194.0</td>\n",
@@ -1832,19 +1814,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Loan status  Current loan amount  Credit score  Annual income  \\\n",
-       "0   fully paid             445412.0         709.0      1167493.0   \n",
-       "2   fully paid           99999999.0         741.0      2231892.0   \n",
-       "3   fully paid             347666.0         721.0       806949.0   \n",
-       "5  charged off             206602.0        7290.0       896857.0   \n",
-       "6   fully paid             217646.0         730.0      1184194.0   \n",
+       "   Current loan amount  Credit score  Annual income  Monthly debt  \\\n",
+       "0             445412.0         709.0      1167493.0       5214.74   \n",
+       "2           99999999.0         741.0      2231892.0      29200.53   \n",
+       "3             347666.0         721.0       806949.0       8741.90   \n",
+       "5             206602.0        7290.0       896857.0      16367.74   \n",
+       "6             217646.0         730.0      1184194.0      10855.08   \n",
        "\n",
-       "   Monthly debt  Years of credit history  Number of open accounts  \\\n",
-       "0       5214.74                     17.2                      6.0   \n",
-       "2      29200.53                     14.9                     18.0   \n",
-       "3       8741.90                     12.0                      9.0   \n",
-       "5      16367.74                     17.3                      6.0   \n",
-       "6      10855.08                     19.6                     13.0   \n",
+       "   Years of credit history  Number of open accounts  \\\n",
+       "0                     17.2                      6.0   \n",
+       "2                     14.9                     18.0   \n",
+       "3                     12.0                      9.0   \n",
+       "5                     17.3                      6.0   \n",
+       "6                     19.6                     13.0   \n",
        "\n",
        "   Number of credit problems  Current credit balance  Maximum open credit  \\\n",
        "0                        1.0                228190.0             416746.0   \n",
