--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "31f31a14-5803-4105-a0f1-9dc10877bfb5",
    "metadata": {
     "tags": []
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "284351b9-0004-4fde-861a-7df3058840c4",
    "metadata": {
     "tags": []
@@ -194,7 +194,7 @@
        "4           1.0          0           1              1         0     0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "af620d78-4060-4b37-8469-37a31dd676ed",
    "metadata": {
     "tags": []
@@ -228,27 +228,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4657e49b-6241-46e2-94fd-ef267822f68a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ccinfo_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Scaling the numeric columns\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m ccinfo_data_scaled \u001b[38;5;241m=\u001b[39m StandardScaler()\u001b[38;5;241m.\u001b[39mfit_transform(ccinfo_df[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlimit_bal\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbill_amt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpay_amt\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Review the scaled data\u001b[39;00m\n\u001b[1;32m      5\u001b[0m ccinfo_data_scaled\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ccinfo_df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[-4.03050203e-01, -2.48996183e-01, -1.95064699e-01, ...,\n",
+       "        -1.02357438e+00, -1.75311853e-01, -4.60753246e-02],\n",
+       "       [ 2.45806717e+00, -2.27301607e-01,  7.89666434e-01, ...,\n",
+       "         1.36313312e+00,  7.62938426e-03,  2.27017159e-03],\n",
+       "       [-4.05859343e-01, -2.40860717e-01, -5.28622793e-01, ...,\n",
+       "        -4.26897507e-01, -1.01567712e-01, -5.03955333e-02],\n",
+       "       ...,\n",
+       "       [-4.12886935e-01, -2.26623651e-01, -2.10744180e-01, ...,\n",
+       "         1.69779369e-01, -4.86222327e-01, -2.85551874e-02],\n",
+       "       [-4.00609671e-01, -2.23911829e-01,  3.13797720e-01, ...,\n",
+       "        -6.25789799e-01,  2.86024718e-01,  5.53574639e-04],\n",
+       "       [ 2.45806717e+00, -2.25945696e-01, -4.09989595e-01, ...,\n",
+       "        -1.42135897e+00, -6.53827173e-01, -9.33168384e-02]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Scaling the numeric columns\n",
-    "data_scaled = StandardScaler().fit_transform(loan_data[['Current loan amoun', 'Credit score', 'pay_amt']])\n",
+    "data_scaled = StandardScaler().fit_transform(loan_data[['Current loan amount', 'Credit score', 'Annual income','Monthly debt','Years of credit history','Number of open accounts', 'Number of credit problems','Current credit balance','Maximum open credit']])\n",
     "\n",
     "# Review the scaled data\n",
     "data_scaled"
@@ -256,8 +267,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "959d45fb-e1df-45d8-bf93-bfe1c3598497",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Current loan amount</th>\n",
+       "      <th>Credit score</th>\n",
+       "      <th>Annual income</th>\n",
+       "      <th>Monthly debt</th>\n",
+       "      <th>Years of credit history</th>\n",
+       "      <th>Number of open accounts</th>\n",
+       "      <th>Number of credit problems</th>\n",
+       "      <th>Current credit balance</th>\n",
+       "      <th>Maximum open credit</th>\n",
+       "      <th>Bankruptcies</th>\n",
+       "      <th>Long term</th>\n",
+       "      <th>Short term</th>\n",
+       "      <th>Home mortgage</th>\n",
+       "      <th>Own home</th>\n",
+       "      <th>Rent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.403050</td>\n",
+       "      <td>-0.248996</td>\n",
+       "      <td>-0.195065</td>\n",
+       "      <td>-1.088060</td>\n",
+       "      <td>-0.139697</td>\n",
+       "      <td>-1.023574</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.175312</td>\n",
+       "      <td>-0.046075</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.458067</td>\n",
+       "      <td>-0.227302</td>\n",
+       "      <td>0.789666</td>\n",
+       "      <td>0.872983</td>\n",
+       "      <td>-0.467973</td>\n",
+       "      <td>1.363133</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.007629</td>\n",
+       "      <td>0.002270</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.405859</td>\n",
+       "      <td>-0.240861</td>\n",
+       "      <td>-0.528623</td>\n",
+       "      <td>-0.799685</td>\n",
+       "      <td>-0.881886</td>\n",
+       "      <td>-0.426898</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.101568</td>\n",
+       "      <td>-0.050396</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.409913</td>\n",
+       "      <td>4.212629</td>\n",
+       "      <td>-0.445444</td>\n",
+       "      <td>-0.176207</td>\n",
+       "      <td>-0.125424</td>\n",
+       "      <td>-1.023574</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.209072</td>\n",
+       "      <td>-0.067003</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.409596</td>\n",
+       "      <td>-0.234759</td>\n",
+       "      <td>-0.179614</td>\n",
+       "      <td>-0.626914</td>\n",
+       "      <td>0.202852</td>\n",
+       "      <td>0.368672</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.453159</td>\n",
+       "      <td>-0.067061</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Current loan amount  Credit score  Annual income  Monthly debt  \\\n",
+       "0            -0.403050     -0.248996      -0.195065     -1.088060   \n",
+       "1             2.458067     -0.227302       0.789666      0.872983   \n",
+       "2            -0.405859     -0.240861      -0.528623     -0.799685   \n",
+       "3            -0.409913      4.212629      -0.445444     -0.176207   \n",
+       "4            -0.409596     -0.234759      -0.179614     -0.626914   \n",
+       "\n",
+       "   Years of credit history  Number of open accounts  \\\n",
+       "0                -0.139697                -1.023574   \n",
+       "1                -0.467973                 1.363133   \n",
+       "2                -0.881886                -0.426898   \n",
+       "3                -0.125424                -1.023574   \n",
+       "4                 0.202852                 0.368672   \n",
+       "\n",
+       "   Number of credit problems  Current credit balance  Maximum open credit  \\\n",
+       "0                        NaN               -0.175312            -0.046075   \n",
+       "1                        NaN                0.007629             0.002270   \n",
+       "2                        NaN               -0.101568            -0.050396   \n",
+       "3                        NaN               -0.209072            -0.067003   \n",
+       "4                        NaN               -0.453159            -0.067061   \n",
+       "\n",
+       "   Bankruptcies  Long term  Short term  Home mortgage  Own home  Rent  \n",
+       "0           1.0          0           1              1         0     0  \n",
+       "1           0.0          0           1              0         1     0  \n",
+       "2           0.0          1           0              0         1     0  \n",
+       "3           0.0          0           1              1         0     0  \n",
+       "4           1.0          0           1              1         0     0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame of the scaled data\n",
+    "data_scaled = pd.DataFrame(data_scaled, columns=['Current loan amount', 'Credit score', 'Annual income','Monthly debt','Years of credit history','Number of open accounts', 'Number of credit problems','Current credit balance','Maximum open credit'])\n",
+    "\n",
+    "# Create copy of the orginal dataframe\n",
+    "loan_data_copy = loan_data.copy()\n",
+    "\n",
+    "# Replace the original data with the columns of information from the scaled Data\n",
+    "loan_data['Current loan amount'] = data_scaled['Current loan amount']\n",
+    "loan_data['Credit score'] = data_scaled['Credit score']\n",
+    "loan_data['Annual income'] = data_scaled['Annual income']\n",
+    "loan_data['Monthly debt'] = data_scaled['Monthly debt']\n",
+    "loan_data['Years of credit history'] = data_scaled['Years of credit history']\n",
+    "loan_data['Number of open accounts'] = data_scaled['Number of open accounts']\n",
+    "loan_data['Number of credit problems'] = data_scaled['Number of credit problems']\n",
+    "loan_data['Current credit balance'] = data_scaled['Current credit balance']\n",
+    "loan_data['Maximum open credit'] = data_scaled['Maximum open credit']\n",
+    "\n",
+    "# Review the DataFrame\n",
+    "loan_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a429f12f-a05f-4ffe-b133-dfa47bedc731",
    "metadata": {},
    "outputs": [],
    "source": []
