added more sections

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -1021,6 +1021,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "278d8690-8758-4077-ad9f-5983380f939c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Export scaled data\n",
+    "csv_file_path = 'Resources/Cl.csv'\n",
+    "\n",
+    "loan_data.to_csv(csv_file_path, index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2c319dbf-450d-4082-b84a-c328ec5253ec",
    "metadata": {},
@@ -1040,6 +1055,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b3a26522-8a5d-4a88-b3a0-a3a6506dd8aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b5cbb48-0dcc-4486-bad5-c67b2e00383f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1072,6 +1095,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "98c7f255-db9f-4ef8-86c2-5b143d60dc92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4dc807d-3427-402f-8637-605d9e5a1b82",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52d3fc08-a9af-4eed-a620-5c2983d45cf1",
    "metadata": {},
    "outputs": [],
    "source": []
