fixed error in cleaning

--- a/Jupyter Notebooks/Random Forest Model.ipynb
+++ b/Jupyter Notebooks/Random Forest Model.ipynb
@@ -576,7 +576,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-03 08:12:00.939454: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-01-03 23:56:19.346046: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -790,7 +790,7 @@
    "source": [
     "# Specify the path to your CSV file\n",
     "csv_file_path1 = '../Resources/Clean_test_scaled.csv'\n",
-    "#csv_file_path2 = '../Resources/Clean_train_scaled.csv'\n",
+    "csv_file_path2 = '../Resources/Clean_train_scaled.csv'\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "test_df = pd.read_csv(csv_file_path1)\n",
