--- a/Jupyter Notebooks/Random Forest Model.ipynb
+++ b/Jupyter Notebooks/Random Forest Model.ipynb
@@ -1305,18 +1305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "742e1713-b5b8-4bf0-9d58-5a4760018626",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a random forest classifier\n",
-    "rf_model = RandomForestClassifier(n_estimators=3000, class_weight = 'balanced', random_state=78)"
+    "rf_model = RandomForestClassifier(n_estimators=3000, class_weight = 'balanced', max_depth = 20, random_state=78)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "d87a2498-1e20-4edb-9775-7d8af008d5b2",
    "metadata": {
     "tags": []
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "f62f1053-5470-4245-a8e3-682dc841f640",
    "metadata": {
     "tags": []
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "0dcaacba-f5b6-4b7b-b027-34ade1409cff",
    "metadata": {
     "tags": []
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "36f790be-fe18-42aa-b3c8-732f1ce27590",
    "metadata": {
     "tags": []
@@ -1402,13 +1402,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>17602</td>\n",
-       "      <td>359</td>\n",
+       "      <td>17384</td>\n",
+       "      <td>577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>61</td>\n",
-       "      <td>2149</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2207</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1416,8 +1416,8 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0        17602          359\n",
-       "Actual 1           61         2149"
+       "Actual 0        17384          577\n",
+       "Actual 1            3         2207"
       ]
      },
      "metadata": {},
@@ -1431,12 +1431,12 @@
       "Classification Report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.98      0.99     17961\n",
-      "           1       0.86      0.97      0.91      2210\n",
+      "           0       1.00      0.97      0.98     17961\n",
+      "           1       0.79      1.00      0.88      2210\n",
       "\n",
-      "    accuracy                           0.98     20171\n",
-      "   macro avg       0.93      0.98      0.95     20171\n",
-      "weighted avg       0.98      0.98      0.98     20171\n",
+      "    accuracy                           0.97     20171\n",
+      "   macro avg       0.90      0.98      0.93     20171\n",
+      "weighted avg       0.98      0.97      0.97     20171\n",
       "\n"
      ]
     }
@@ -1449,14 +1449,6 @@
     "print(\"Classification Report\")\n",
     "print(classification_report(y_test, predictions))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35997740-214d-4c17-bd60-e020957cc6e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
