--- a/Jupyter Notebooks/Random Forest Model.ipynb
+++ b/Jupyter Notebooks/Random Forest Model.ipynb
@@ -1131,7 +1131,7 @@
    "outputs": [],
    "source": [
     "# Create a random forest classifier\n",
-    "rf_model = RandomForestClassifier(n_estimators=3000, random_state=78)"
+    "rf_model = eer(n_estimators=3000, random_state=78)"
    ]
   },
   {
