--- a/Jupyter Notebooks/Ensemble Model.ipynb
+++ b/Jupyter Notebooks/Ensemble Model.ipynb
@@ -213,7 +213,7 @@
    ],
    "source": [
     "# Specify the path to your CSV file\n",
-    "csv_file_path = 'Resources/Clean_train_scaled.csv'\n",
+    "csv_file_path = '../Resources/Clean_test_scaled.csv'\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "loan_data = pd.read_csv(csv_file_path)\n",
