--- a/Jupyter Notebooks/Random Forest Model.ipynb
+++ b/Jupyter Notebooks/Random Forest Model.ipynb
@@ -600,6 +600,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from pathlib import Path\n",
     "from sklearn import tree\n",
+    "import joblib\n",
+    "import os\n",
     "%matplotlib inline"
    ]
   },
@@ -1448,6 +1450,22 @@
     "print(f\"Accuracy Score : {acc_score}\")\n",
     "print(\"Classification Report\")\n",
     "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85f1498d-fd42-441e-8a9a-b19b5980d716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the path for saving the model\n",
+    "model_path = \"../Resources/random_forest_model.joblib\"\n",
+    "# Create the directory if it doesn't exist\n",
+    "os.makedirs(os.path.dirname(model_path), exist_ok=True)\n",
+    "# Save the model to the specified path using joblib\n",
+    "joblib.dump(rf_model, model_path)\n",
+    "print(f\"Model saved as {model_path}\")"
    ]
   }
  ],
